--- a/src/routes/Home.css
+++ b/src/routes/Home.css
@@ -4,6 +4,11 @@
     justify-content: center;
 }
 
+.navbar {
+    width: 100%;
+    padding: 15px;
+}
+
 .loader {
     width: 100%;
     height: 100vh;
