--- a/src/routes/Home.css
+++ b/src/routes/Home.css
@@ -1,7 +1,7 @@
 .container {
-    height: 100%;
-    display: flex;
-    justify-content: center;
+  height: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 /* .navbar {
@@ -10,26 +10,29 @@
 } */
 
 .loader {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-weight: 300;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 300;
 }
 
 .movies {
-    display: grid;
-    grid-template-columns: repeat(2, minmax(400px, 1fr));
-    grid-gap: 100px;
-    padding: 50px;
-    width: 80%;
-    padding-top: 70px;
+  display: grid;
+  grid-template-columns: repeat(2, minmax(400px, 1fr));
+  grid-gap: 100px;
+  padding: 50px;
+  width: 80%;
+  padding-top: 70px;
 }
 
 @media screen and (max-width: 1090px) {
-    .movies {
-        grid-template-columns: 1fr;
-        width: 100%;
-    }
+  .movies {
+    all: unset;
+    display: flex;
+    flex-direction: column;
+    padding-top: 70px;
+    width: 80%;
+  }
 }
